k8s/auth-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
        - name: auth-api-con
          image: umairsaleem1/stackoverflow-auth-api:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api-svc
spec:
  selector:
    app: auth-api
  ports:
    - name: http
      port: 8001
      targetPort: 8001
  type: ClusterIP
