k8s/qna-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qna-api-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qna-api
  template:
    metadata:
      labels:
        app: qna-api
    spec:
      containers:
        - name: qna-api-con
          image: umairsaleem1/stackoverflow-qna-api:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: qna-api-svc
spec:
  selector:
    app: qna-api
  ports:
    - name: http
      port: 8002
      targetPort: 8002
  type: ClusterIP
