k8s/qna-db-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qna-db-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qna-db
  template:
    metadata:
      labels:
        app: qna-db
    spec:
      containers:
        - name: qna-db-con
          image: postgres:alpine
          volumeMounts:
            - name: qna-db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: qna-db-data
          persistentVolumeClaim:
            claimName: qna-db-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: qna-db-svc
spec:
  selector:
    app: qna-db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  type: ClusterIP
