k8s/tag-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tag-api-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tag-api
  template:
    metadata:
      labels:
        app: tag-api
    spec:
      containers:
        - name: tag-api-con
          image: umairsaleem1/stackoverflow-tag-api:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: tag-api-svc
spec:
  selector:
    app: tag-api
  ports:
    - name: http
      port: 8003
      targetPort: 8003
  type: ClusterIP
