k8s/tag-db-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tag-db-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tag-db
  template:
    metadata:
      labels:
        app: tag-db
    spec:
      containers:
        - name: tag-db-con
          image: mongo:latest
          volumeMounts:
            - name: tag-db-data
              mountPath: /data/db
      volumes:
        - name: tag-db-data
          persistentVolumeClaim:
            claimName: tag-db-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: tag-db-svc
spec:
  selector:
    app: tag-db
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  type: ClusterIP
