k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api/auth/?(.*)
            backend:
              service:
                name: auth-api-svc
                port:
                  number: 8001
          - pathType: Prefix
            path: /api/qna/?(.*)
            backend:
              service:
                name: qna-api-svc
                port:
                  number: 8002
          - pathType: Prefix
            path: /api/tag/?(.*)
            backend:
              service:
                name: tag-api-svc
                port:
                  number: 8003
          # - path: /?(.*)
          #   backend:
          #     service:
          #       name: client-svc
          #       port:
          #         number: 3000
